# carnage3d

./: .gitignore  .gitmodules  .travis.yml  Bitmap.cpp  Bitmap.h  CMakeLists.txt  CameraController.h  Carnage3D.cpp  Carnage3D.vcxproj  Carnage3D.vcxproj.filters  CarnageGame.cpp  CarnageGame.h  CharacterController.cpp  CityMapManager.cpp  CityMapManager.h  CityMapMeshBuilder.cpp  CityMapMeshBuilder.h  CityMapRenderer.cpp  CityMapRenderer.h  CityMeshBuilder.cpp  CityMeshBuilder.h  CityRenderer.cpp  CityRenderer.h  CityScapeData.cpp  CityScapeData.h  CityStyleData.cpp  CityStyleData.h  CollisionManager.cpp  CollisionManager.h  CommonTypes.h  Console.cpp  Console.h  ConsoleWindow.cpp  ConsoleWindow.h  DebugRenderer.cpp  DebugRenderer.h  DebugWindow.cpp  DebugWindow.h  DynamicVertexCache.cpp  DynamicVertexCache.h  (+136 more)
.github/: FUNDING.yml
cmake/: Carnage3D.cmake  FindBox2D.cmake  FindGLEW.cmake
docs/: Sprites.txt  ToDo.txt  miami_objects.txt  nyc_objects.txt  ped.txt
src/: .clang-format  AIManager.cpp  AIManager.h  AiCharacterController.cpp  AiCharacterController.h  AiDefs.h  AiGangBehavior.cpp  AiGangBehavior.h  AiManager.cpp  AiManager.h  AiPedestrianBehavior.cpp  AiPedestrianBehavior.h  Ai_Manager.cpp  AudioArchive.cpp  AudioArchive.h  AudioDataStream.cpp  AudioDataStream.h  AudioDevice.cpp  AudioDevice.h  AudioListener.h  AudioManager.cpp  AudioManager.h  AudioSampleArchive.cpp  AudioSampleArchive.h  AudioSource.cpp  AudioSource.h  Box2D_Helpers.h  BroadcastEventsManager.cpp  BroadcastEventsManager.h  CMakeLists.txt  CameraController.h  Carnage3D.sln  Carnage3D.vcxproj  (+230 more)
(+30 files in other folders)
